--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular-ui-router": "~0.3.2",
     "bootstrap": "~3.3.4",
     "angular-bootstrap": "~2.1.4",
-    "angular": "^1.4.14"
+    "angular": "^1.4.14",
+    "ngprogress": "^1.1.3"
   }
 }
